--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "source/useractionmodule"]
 	path = source/useractionmodule
 	url = git@github.com:JhonnyJason/thingycreate-sources-useractionmodule.git
+[submodule "source/userinquirermodule"]
+	path = source/userinquirermodule
+	url = git@github.com:JhonnyJason/thingycreate-sources-userinquirermodule.git
